added twitter timeline

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -24,9 +24,8 @@
       </div>
       <h4>Users..</h4>
       <p>Hungry users or perspective buyers?</p>
-      <ul class="disc">
-  <li><a href="http://twitter.com/neverlunchsolo">@neverlunchsolo</a><br />Follow us on twitter.</li>
-      </ul>
+      <a class="twitter-timeline" width="200" height="300" href="https://twitter.com/twitterapi" data-widget-id="392999086766309376">Tweets by @neverlunchsolo</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   </div>
 
